# wallet_pay

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: bot.py  webhook.py
tests/test_methods/: test_create.py  test_get_order_list.py
tests/test_types/: test_create_response.py  test_get_order_list_response.py  test_get_preview_response.py
walletpay/: __init__.py  exceptions.py
walletpay/client/: client.py
walletpay/client/session/: _aiohttp.py  base.py
walletpay/methods/: __init__.py  base.py  create.py  get_order_amount.py  get_order_list.py  get_preview.py
walletpay/types/: __init__.py  base.py  create_response.py  enums.py  get_preview_response.py  money_amount.py  order_amount.py  order_list.py  order_preview.py  order_reconciliation_item.py  payment_option.py  update.py
