[tool.poetry]
name = "walletpay-sdk"
version = "1.1.3"
description = ""
authors = [
    "pypchuk <opengl32.dll.tar.gz@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "walletpay" }
]

[tool.poetry.dependencies]
python = "^3.8"
adaptix = "^3.0.0a4"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.examples.dependencies]
aiogram = "3.0.0rc1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
